flow-root to avoid quotes clipping

--- a/markdown.css
+++ b/markdown.css
@@ -11,6 +11,7 @@
 .redirectnote {margin-top: -8px}
 
 .quote {
+    display: flow-root;
     margin: 14px 0;
     padding: 10px 12px;
     border-left: 5px solid rgba(255,255,255,0.5);
